[gd_scene load_steps=3 format=3 uid="uid://bdpfln22w1uys"]

[ext_resource type="Script" uid="uid://dcdcwyy33n7xd" path="res://source/client/ui/hud/harvesting/HarvestingPanel.gd" id="1"]
[ext_resource type="StyleBox" uid="uid://dmt25bssm06ca" path="res://source/client/ui/hud/harvesting/general_panel.tres" id="2_66tgb"]

[node name="HarvestingPanel" type="Control"]
z_index = 900
layout_mode = 3
anchors_preset = 0
offset_right = 300.0
offset_bottom = 80.0
mouse_filter = 2
script = ExtResource("1")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_styles/panel = ExtResource("2_66tgb")

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 4

[node name="TierLabel" type="Label" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Tier 1 Miner Node"
horizontal_alignment = 1

[node name="ProgressBar" type="ProgressBar" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
show_percentage = false

[node name="InfoLabel" type="Label" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "1 Player â€¢ 1.00x Multiplier"
horizontal_alignment = 1
